--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+}
+
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -25,7 +34,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   
@@ -44,19 +52,26 @@ body {
 }
 
 .header {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  border-radius: 0;
-  width: 100%;
-  z-index: 1;
+  display: flex;
   color: #3e065f;
-  
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
+  margin: 0px;
 }
 
-.nav-logo {
-  width: 1.5rem;
+header img {
+  width: auto;
+  height: 100px;
 }
+
+
+li, a, .cta {
+    text-decoration: none;
+}
+
+
+
 
 h1{
   font-family: "Rubik Doodle Shadow", system-ui;
@@ -142,3 +157,4 @@ form button:hover{
   background-color: #0c1e22;
   border-color:#a0a3a8;
 }
+
