--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ form input {
   margin-bottom: 50px;
   background-color:white;
   border: 1px solid white;
-
+  color: black;
 }
 
 form input::placeholder {
